[package]
name = "canter"
description = "Full-text search providing an extensible API like Tantivy built on top of SQLite"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamreichold/canter"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.15"
rusqlite = { version = "0.34", features = ["functions"] }
smallvec = "1.15"
